# jsonrpc

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci-image.yml
include/: rpc.h
src/: main.c  rpc.c
